--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,28 @@
-main{
-    font-size: 30em;
+main {
+    
+    width: 50%;
+    margin: 50px auto;
+    text-align: center;
+}
+
+table {
+    margin: 50px auto;
+}
+
+table, th, td {
+    border-collapse: collapse;
+    border: 1px solid #000;
+}
+
+th, td {
+    padding: 5px;
+    
+}
+
+#name-input{
+    border-radius: 10px;
+}
+
+#search-input{
+    border-radius: 25px;
 }
